unpackaged/main/default/objects/WorkOrder/fields/Labor_cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_cost__c</fullName>
    <label>Labor cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>