unpackaged/main/default/objects/WorkOrder/fields/Misc_Charges__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charges__c</fullName>
    <label>Misc. Charges</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>