unpackaged/main/default/objects/WorkOrder/fields/Parts_cost__c.field-meta.xml
<CustomField>
    <fullName>Parts_cost__c</fullName>
    <label>Parts cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>