unpackaged/main/default/objects/WorkOrder/fields/Total_cost_for_repair__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_for_repair__c</fullName>
    <label>Total cost for repair</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>