unpackaged/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>CreatedDate</columns>
    <columns>StartDate</columns>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Total_cost_for_repair__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
    </filters>
    <label>All Work Orders</label>
</ListView>