unpackaged/main/default/objects/WorkOrder/listViews/In_progress_active_work_orders.listView-meta.xml
<ListView>
    <fullName>In_progress_active_work_orders</fullName>
    <columns>Name</columns>
    <columns>Vehicle__c</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Scheduled,Assigned,In Progress</value>
    </filters>
    <label>In progress/active work orders</label>
</ListView>